# Stellar_arbitrage

./: .env  .env.example  .gitignore  CROSS_CHAIN_IMPLEMENTATION_SUMMARY.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  FINAL_DEPLOYMENT_SUMMARY.md  FINAL_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PROJECT_COMPLETION_SUMMARY.md  PROJECT_SUMMARY.md  README.md  UPGRADE_COMPLETION_NOTICE.md  USER_INTERACTION_FLOW.md  WORKFLOW_INTEGRATION.md  development_plan.md  development_timeline.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  phase2_implementation_summary.md  render.yaml  risk_assessment.md
.lingma/rules/: ONLY_RULE.md
.qoder/rules/: contracts.md
config/: env_config.rs
contracts/: ArbitrageDetector.rs  Cargo.toml  ExchangeInterface.rs  ReflectorOracleClient.rs
contracts/arbitrage_detector/: Cargo.toml
contracts/arbitrage_detector/src/: lib.rs  oracle_client.rs
contracts/arbitrage_detector/tests/: test_arbitrage_integration.py  test_assets.rs
contracts/flash_loan_arbitrage_engine/: Cargo.toml
contracts/flash_loan_arbitrage_engine/src/: lib.rs
contracts/reflector_oracle_client/: Cargo.toml
contracts/reflector_oracle_client/src/: lib.rs
contracts/reflector_oracle_client/tests/: test_oracle.rs
contracts/src/: arbitrage_detector.rs  cross_chain_arbitrage_detector.rs  cross_chain_flash_loan_engine.rs  cross_chain_trading_engine.rs  exchange_interface.rs  flash_loan_arbitrage_engine.rs  lib.rs  reflector_oracle_client.rs  risk_management_system.rs  trading_execution_engine.rs  uniswap_interface.rs
contracts/trading_engine/: Cargo.toml
contracts/trading_engine/src/: lib.rs
docs/: COMPLETE_UPGRADE_DOCUMENTATION.md  DASHBOARD_DESIGN_IMPLEMENTATION.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_README.md  DEPLOYMENT_SUMMARY.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_SUMMARY.md  FIXES_SUMMARY.md  FRONTEND_FIXES_SUMMARY.md  FULL_STACK_SYNC_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  SOCKET_FIXES_SUMMARY.md  STELLAR_TRANSACTION_DESIGN_IMPROVEMENTS.md  WEBSOCKET_FIXES_SUMMARY.md  WEBSOCKET_SYNC_FIXES.md  api_documentation.md  asset_migration_guide.md  cross_chain_arbitrage_implementation_plan.md  development_plan.md  implementation_guide.md  index.md  phase1_completion_summary.md  smart_contracts_implementation_plan.md  status_report.md  success_criteria.md  technical_requirements.md  test_plan.md  testing_strategy.md  todo_list.md  upgrade_analysis.md  upgrade_summary.md
off_chain/: Analytics.py  PriceMonitor.js  StellarDexClient.js  package.json  requirements.txt
scripts/: README.md  deploy-arbitrage-detector.bat  deploy-arbitrage-detector.sh  deploy-reflector-oracle-client.bat  deploy-reflector-oracle-client.sh  deploy-reflector-oracle.sh  deploy-testnet.bat  deploy-testnet.sh  deploy-with-key.bat  deploy-with-key.sh  deploy_contracts.js  run-tests.bat  run-tests.sh
src/: arbitrage_detector.rs  cross_chain_arbitrage_detector.rs  cross_chain_flash_loan_engine.rs  exchange_interface.rs  flash_loan_arbitrage_engine.rs  integration_tests.rs  lib.rs  main.rs  price_monitoring.rs  reflector_oracle_client.rs  risk_management_system.rs  trading_execution_engine.rs  uniswap_interface.rs
src/tests/: test_arbitrage_detector.rs  test_exchange_interface.rs  test_reflector_client.rs
web/arbitrage-dashboard/: package.json
web/dashboard/: .gitignore  .stylelintrc.json  package-lock.json  package.json  tailwind.config.js  vite.config.js
web/dashboard/backend/: .env.example  README.md  SUMMARY.md  accounts.py  arbitrage_engine.py  assets.py  check_balance.py  contract_client.py  create_test_account.py  data_processor.py  error_handler.py  fund_account.py  liquidity_pools.py  main.py  orders.py  reflector_client.py  requirements.txt  risk_management.py  server.js  setup_trading.py  setup_trading_assets.py  test_client.py  test_contracts.py  test_fixes.py  test_websocket.py  trading_account.py  trading_executor.py  update_trading_account.py  verify_fixes.py  verify_trading_account.py
web/dashboard/backend/data/: keypairs.json  trading_account.json
web/dashboard/src/: App.jsx  Dashboard.jsx  Routes.jsx  index.css  main.jsx
web/dashboard/src/components/: ArbitrageChart.jsx  ArbitrageDashboard.jsx  ArbitrageExecutor.jsx  ArbitrageLogViewer.jsx  ContractMonitor.jsx  ErrorBoundary.jsx  KpiCard.jsx  Navigation.jsx  NotificationSystem.jsx  PositionSizingCalculator.jsx  RiskDashboard.jsx  Settings.jsx  SocketContext.jsx  TradeHistoryTable.jsx  UIShowcase.jsx  WalletConnector.jsx
web/dashboard/src/components/ui/: Alert.jsx  Badge.jsx  Button.jsx  Card.jsx  Input.jsx  Progress.jsx  index.js
web/dashboard/src/config/: contracts.json
web/dashboard/src/lib/: RiskManager.js  StellarContractClient.js  validation.js
