[package]
name = "stellar-arbitrage"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonrpsee-http-client = { version = "0.20.4", optional = true }
jsonrpsee-core = { version = "0.20.4", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }
hex = { version = "0.4", optional = true }
stellar-xdr = { version = "23.0.0", optional = true }

# For HTTP requests to Reflector Network oracle (only for binary, not library)
reqwest = { version = "0.11", features = ["json"], optional = true }

# Environment variable management (only for binary, not library)
dotenv = { version = "0.15.0", optional = true }

# Serialization (only for binary, not library)
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# Error handling (only for binary, not library)
anyhow = { version = "1.0", optional = true }
thiserror = { version = "1.0", optional = true }

# Math operations for financial calculations (only for binary, not library)
rust_decimal = { version = "1.26", optional = true }
rust_decimal_macros = { version = "1.26", optional = true }

[dev-dependencies]
# Testing framework
soroban-sdk = { version = "23.0.0-rc.3", features = ["testutils"] }

[[bin]]
name = "arbitrage-engine"
path = "src/main.rs"
required-features = ["binary"]

[features]
binary = ["reqwest", "tokio", "dotenv", "serde", "serde_json", "anyhow", "thiserror", "rust_decimal", "rust_decimal_macros", "jsonrpsee-http-client", "jsonrpsee-core", "hex"]
testing = ["binary"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true