[package]
name = "stellar-arbitrage-contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = { version = "23.0.0-rc.3" }

[dev-dependencies]
soroban-sdk = { version = "23.0.0-rc.3", features = ["testutils"] }

[lib]
crate-type = ["cdylib"]

[features]
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true