[workspace]
members = [
    "arbitrage_detector",
    "trading_engine",
    "reflector_oracle_client",
    "flash_loan_arbitrage_engine",
]
resolver = "2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true